--- a/html/index.html
+++ b/html/index.html
@@ -8,5 +8,22 @@
 <body>
     <p> welcom to git world</p>
     <h1>new to git</h1>
+    <table>
+        <tr>
+            <td>s.no</td>
+            <td>name</td>
+            <td>marks</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>nithin</td>
+            <td>25</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>pavan</td>
+            <td>26</td>
+        </tr>
+    </table>
 </body>
 </html>
